[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/themes/Blocky_text.tres" type="Theme" id=1]
[ext_resource path="res://fonts/themes/Blocky_small_title.tres" type="Theme" id=2]
[ext_resource path="res://visual/GUI/Frames/portrait_frame.png" type="Texture" id=3]
[ext_resource path="res://goats/images/00703.png" type="Texture" id=4]
[ext_resource path="res://visual/GUI/Frames/Frame_1_new.png" type="Texture" id=5]
[ext_resource path="res://scripts/training/TrainingProfile.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 1, 0.654902, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Animation" id=33]
length = 0.3

[sub_resource type="Animation" id=31]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Frame:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=36]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 2.6, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=32]
length = 0.3

[node name="TrainingProfile" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 0
position = Vector2( 512, 328 )
scale = Vector2( 1.5, 1.5 )
z_index = 5
script = ExtResource( 6 )

[node name="Frame" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.3333
margin_top = -333.333
margin_right = 390.667
margin_bottom = -36.3333
rect_pivot_offset = Vector2( 70, 56.5 )
mouse_filter = 2
texture = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Frame"]
margin_left = 228.0
margin_top = 125.0
margin_right = 349.0
margin_bottom = 202.0
color = Color( 0, 0, 0, 0.768627 )

[node name="move_button" type="Button" parent="Frame"]
visible = false
anchor_right = 1.0
margin_left = 95.0
margin_top = 56.0
margin_right = -112.0
margin_bottom = 82.0
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
flat = true

[node name="ViewportContainer" type="ViewportContainer" parent="Frame"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.619
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -73.5
margin_right = 200.592
margin_bottom = 315.5
rect_scale = Vector2( 0.28, 0.28 )
stretch = true

[node name="Viewport" type="Viewport" parent="Frame/ViewportContainer"]
size = Vector2( 407, 389 )
own_world = true
transparent_bg = true
handle_input_locally = false
fxaa = true
debanding = true
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 0

[node name="Goat_Pic" type="TextureRect" parent="Frame/ViewportContainer/Viewport"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = -148.0
margin_right = 126.0
margin_bottom = 110.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="Info" type="Control" parent="Frame"]
margin_left = 69.0
margin_top = 55.0
margin_right = 361.0
margin_bottom = 229.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Name_Label" type="Label" parent="Frame/Info"]
visible = false
margin_left = 25.0
margin_top = 7.0
margin_right = 271.0
margin_bottom = 23.0
grow_horizontal = 2
theme = ExtResource( 2 )
text = "Goaty McGee"
align = 1
clip_text = true

[node name="goat_frame" type="TextureRect" parent="Frame/Info"]
visible = false
margin_left = 10.0
margin_top = 31.0
margin_right = 95.0
margin_bottom = 116.0
texture = ExtResource( 3 )

[node name="TabContainer" type="TabContainer" parent="Frame/Info"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 95.0
margin_top = 28.0
margin_right = 285.0
margin_bottom = 165.0
theme = ExtResource( 1 )
tab_align = 0

[node name="Stats" type="Tabs" parent="Frame/Info/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 25.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 2 )
tab_align = 0

[node name="Bars" type="Control" parent="Frame/Info/TabContainer/Stats"]
margin_top = -10.0
margin_right = 183.0
margin_bottom = 98.0

[node name="EXP_Bar" type="ProgressBar" parent="Frame/Info/TabContainer/Stats/Bars"]
margin_left = 79.6667
margin_top = 88.0
margin_right = 168.667
margin_bottom = 99.0
theme = ExtResource( 1 )
custom_styles/fg = SubResource( 35 )
custom_styles/bg = SubResource( 8 )
value = 50.0
percent_visible = false

[node name="EXP_Amount" type="Label" parent="Frame/Info/TabContainer/Stats/Bars/EXP_Bar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -3.5
margin_right = 42.5
margin_bottom = 3.5
theme = ExtResource( 1 )
text = "0/100"
align = 1

[node name="Level_Label" type="Label" parent="Frame/Info/TabContainer/Stats"]
margin_left = 102.667
margin_top = 20.6666
margin_right = 174.667
margin_bottom = 29.6666
grow_horizontal = 0
theme = ExtResource( 1 )
text = "Level: 1"
align = 2

[node name="Class_Label" type="Label" parent="Frame/Info/TabContainer/Stats"]
visible = false
margin_left = 16.5
margin_top = 1.0
margin_right = 160.5
margin_bottom = 18.0
grow_horizontal = 2
theme = ExtResource( 1 )
text = "Base Attribute Gain: 0.1
Base Exp Gain: 100"
align = 1

[node name="Str_Label" type="Label" parent="Frame/Info/TabContainer/Stats"]
margin_left = 90.0
margin_top = 31.6667
margin_right = 174.0
margin_bottom = 40.6667
grow_horizontal = 0
theme = ExtResource( 1 )
text = "Str: 10 + 0.05"

[node name="Dex_Label" type="Label" parent="Frame/Info/TabContainer/Stats"]
margin_left = 90.0
margin_top = 44.0
margin_right = 174.0
margin_bottom = 53.0
grow_horizontal = 0
theme = ExtResource( 1 )
text = "Dex: 10 + 0.05"

[node name="Wis_Label" type="Label" parent="Frame/Info/TabContainer/Stats"]
margin_left = 90.0
margin_top = 56.3333
margin_right = 174.0
margin_bottom = 65.3333
grow_horizontal = 0
theme = ExtResource( 1 )
text = "Wis: 10 + 0.05"

[node name="Exp_label" type="Label" parent="Frame/Info/TabContainer/Stats"]
margin_left = 102.0
margin_top = 68.0
margin_right = 174.0
margin_bottom = 77.0
grow_horizontal = 0
theme = ExtResource( 1 )
text = "Exp: 0  + 50"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/action_down = SubResource( 33 )
anims/expand = SubResource( 31 )
anims/fade_in = SubResource( 36 )
anims/inventory_show = SubResource( 32 )

[node name="Tween" type="Tween" parent="."]

[node name="Tick_Timer" type="Timer" parent="."]

[connection signal="timeout" from="Tick_Timer" to="." method="_on_Tick_Timer_timeout"]
